@@ -1,5 +1,10 @@
 2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>
 
+	* plugins/snippets/snippets/Manager.py: fixed not allowing deletion
+	of system snippets
+	
+2007-07-27  Jesse van den Kieboom  <jesse@icecrew.nl>
+
 	* plugins/snippets/snippets/Manager.py: fixed buffer and view
 	settings
 
